--- a/templates/base.html
+++ b/templates/base.html
@@ -32,5 +32,6 @@
   <main class="container">
     {% block content %}{% endblock %}
   </main>
+   {% block scripts %}{% endblock %}
 </body>
 </html>
